kubefiles/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bankaccount-ingress
  namespace: quarkus-cqrs-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: bankaccount-ingress
spec:
  rules:
    - http: # roteamento 
        paths:  
          - path: /transaction-service/*
            backend:
              serviceName: transaction-service
              servicePort: 8080
          - path: /balance-service/*
            backend:
              serviceName: balance-service
              servicePort: 8080
